--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     
 <h2>Problem is not a problem</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut fugit impedit iste quos fugiat facere harum inventore voluptas possimus nobis quas illum quam sapiente est, quae, soluta porro quisquam? Nesciunt!</p>
 <img width="200px" src="images/home.jpg" alt="">
 <img width="200px" src="images/angel brackets.jpg" alt="">
 
